--- a/notebooks/backbone.ipynb
+++ b/notebooks/backbone.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "r = open(\"/Users/gbatra/dep-repos/f8a-server-backbone/deps.txt\")"
@@ -22,17 +24,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipdata = set(pipdata)\n"
+    "set_pipdata = []\n",
+    "\n",
+    "for each in pipdata:\n",
+    "    set_pipdata.append(each.split(\"==\")[0].lower() + \"-\" + each.split(\"==\")[1])\n",
+    "\n",
+    "set_pipdata = set(set_pipdata)\n",
+    "set_pipdata\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gistdata = {'idna-2.6', 'urllib3-1.22', 'ipaddress-1.0.19', 'docker-compose-1.19.0', 'cached-property-1.3.1', 'certifi-2018.1.18', 'enum34-1.1.6', 'functools32-3.2.3.post2', 'requests-2.18.4', 'PyYAML-3.12', 'docopt-0.6.2', 'backports.ssl-match-hostname-3.5.0.1', 'docker-pycreds-0.2.1', 'dockerpty-0.4.1', 'docker-2.7.0', 'six-1.11.0', 'chardet-3.0.4', 'texttable-0.9.1', 'jsonschema-2.6.0', 'websocket-client-0.46.0'}\n",
@@ -42,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +67,7 @@
        "24"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +87,7 @@
        "20"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,22 +98,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "24"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'list' and 'set'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-43b8c555fe13>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mset_pipdata\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mgistdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'set'"
+     ]
     }
    ],
    "source": [
-    "len(pipdata - gistdata)\n",
+    "set_pipdata - gistdata\n",
+    "\n",
     "\n",
     "\n"
    ]
