Added few more code experiments

--- a/notebooks/backbone.ipynb
+++ b/notebooks/backbone.ipynb
@@ -24,9 +24,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'attrs-17.4.0',\n",
+       " 'certifi-2018.1.18',\n",
+       " 'chardet-3.0.4',\n",
+       " 'click-6.7',\n",
+       " 'flask-0.12.2',\n",
+       " 'flask-cors-3.0.2',\n",
+       " 'gevent-1.2.2',\n",
+       " 'greenlet-0.4.13',\n",
+       " 'gunicorn-19.7.1',\n",
+       " 'idna-2.6',\n",
+       " 'itsdangerous-0.24',\n",
+       " 'jinja2-2.10',\n",
+       " 'markupsafe-1.0',\n",
+       " 'pluggy-0.6.0',\n",
+       " 'psycopg2-2.7.4',\n",
+       " 'py-1.5.2',\n",
+       " 'pytest-3.4.0',\n",
+       " 'requests-2.18.4',\n",
+       " 'requests-futures-0.9.7',\n",
+       " 'semantic-version-2.6.0',\n",
+       " 'six-1.11.0',\n",
+       " 'sqlalchemy-1.2.3',\n",
+       " 'urllib3-1.22',\n",
+       " 'werkzeug-0.14.1'}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "set_pipdata = []\n",
     "\n",
@@ -98,26 +132,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'list' and 'set'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-43b8c555fe13>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mset_pipdata\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mgistdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'set'"
-     ]
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "set_pipdata - gistdata\n",
+    "len(set_pipdata - gistdata)\n",
+    "\n",
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'attrs-17.4.0',\n",
+       " 'click-6.7',\n",
+       " 'flask-0.12.2',\n",
+       " 'flask-cors-3.0.2',\n",
+       " 'gevent-1.2.2',\n",
+       " 'greenlet-0.4.13',\n",
+       " 'gunicorn-19.7.1',\n",
+       " 'itsdangerous-0.24',\n",
+       " 'jinja2-2.10',\n",
+       " 'markupsafe-1.0',\n",
+       " 'pluggy-0.6.0',\n",
+       " 'psycopg2-2.7.4',\n",
+       " 'py-1.5.2',\n",
+       " 'pytest-3.4.0',\n",
+       " 'requests-futures-0.9.7',\n",
+       " 'semantic-version-2.6.0',\n",
+       " 'sqlalchemy-1.2.3',\n",
+       " 'werkzeug-0.14.1'}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_pipdata - gistdata\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pip._vendor import pkg_resources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Werkzeug\n",
+      "Flask-Cors\n",
+      "pluggy\n",
+      "psycopg2\n",
+      "idna\n",
+      "Jinja2\n",
+      "py\n",
+      "certifi\n",
+      "SQLAlchemy\n",
+      "itsdangerous\n",
+      "pytest\n",
+      "semantic-version\n",
+      "six\n",
+      "MarkupSafe\n",
+      "gevent\n",
+      "requests-futures\n",
+      "click\n",
+      "requests\n",
+      "Flask\n",
+      "greenlet\n",
+      "chardet\n",
+      "attrs\n",
+      "gunicorn\n",
+      "urllib3\n",
+      "{Werkzeug 0.14.1 (/usr/local/lib/python3.6/site-packages): [], Flask-Cors 3.0.2 (/usr/local/lib/python3.6/site-packages): ['Flask>=0.9', 'Six'], psycopg2 2.6.2 (/usr/local/lib/python3.6/site-packages): [], idna 2.6 (/usr/local/lib/python3.6/site-packages): [], Jinja2 2.10 (/usr/local/lib/python3.6/site-packages): ['MarkupSafe>=0.23'], certifi 2018.1.18 (/usr/local/lib/python3.6/site-packages): [], SQLAlchemy 1.1.3 (/usr/local/lib/python3.6/site-packages): [], itsdangerous 0.24 (/usr/local/lib/python3.6/site-packages): [], six 1.11.0 (/usr/local/lib/python3.6/site-packages): [], MarkupSafe 1.0 (/usr/local/lib/python3.6/site-packages): [], requests-futures 0.9.7 (/usr/local/lib/python3.6/site-packages): ['requests>=1.2.0'], click 6.7 (/usr/local/lib/python3.6/site-packages): [], requests 2.18.4 (/usr/local/lib/python3.6/site-packages): ['idna<2.7,>=2.5', 'certifi>=2017.4.17', 'chardet<3.1.0,>=3.0.2', 'urllib3<1.23,>=1.21.1'], Flask 0.12.2 (/usr/local/lib/python3.6/site-packages): ['Werkzeug>=0.7', 'click>=2.0', 'itsdangerous>=0.21', 'Jinja2>=2.4'], chardet 3.0.4 (/usr/local/lib/python3.6/site-packages): [], gunicorn 19.7.1 (/usr/local/lib/python3.6/site-packages): [], urllib3 1.22 (/usr/local/lib/python3.6/site-packages): []}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['pluggy==0.6.0',\n",
+       " 'py==1.5.2',\n",
+       " 'pytest==3.4.0',\n",
+       " 'semantic-version==2.6.0',\n",
+       " 'gevent==1.2.2',\n",
+       " 'greenlet==0.4.13',\n",
+       " 'attrs==17.4.0']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "package_dict = {}\n",
+    "black_list = []\n",
+    "for each in pipdata:\n",
+    "    \n",
+    "    try:\n",
+    "        _package_name = each.split(\"==\")[0]\n",
+    "        print(_package_name)\n",
+    "        _package = pkg_resources.working_set.by_key[_package_name.lower()]\n",
+    "        package_dict[_package]  = [str(r) for r in _package.requires()]\n",
+    "    except:\n",
+    "        black_list.append(each)\n",
+    "        continue\n",
+    "print(package_dict)\n",
+    "\n",
+    "black_list\n",
+    "    \n"
    ]
   },
   {
