Addeed pipdep tree for backbone

--- a/notebooks/worker.ipynb
+++ b/notebooks/worker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        " 'xmltodict==0.11.0']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "54"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "84"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,75 +161,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'BigQuery-Python==1.13.0',\n",
-       " 'PyYAML==3.12',\n",
-       " 'SQLAlchemy==1.2.2',\n",
-       " 'amqp==2.1.4',\n",
-       " 'anymarkup-core==0.7.1',\n",
-       " 'anymarkup==0.7.0',\n",
-       " 'beautifulsoup4==4.6.0',\n",
-       " 'billiard==3.5.0.3',\n",
-       " 'boto3==1.5.28',\n",
-       " 'boto==2.48.0',\n",
-       " 'botocore==1.8.42',\n",
-       " 'celery==4.1.0',\n",
-       " 'certifi==2018.1.18',\n",
-       " 'chardet==3.0.4',\n",
-       " 'click==6.7',\n",
-       " 'codegen==1.0',\n",
-       " 'colorama==0.3.9',\n",
-       " 'configobj==5.0.6',\n",
-       " 'docutils==0.14',\n",
-       " 'git2json==0.2.3',\n",
-       " 'google-api-python-client==1.6.5',\n",
-       " 'graphviz==0.8.2',\n",
-       " 'httplib2==0.10.3',\n",
-       " 'idna==2.6',\n",
-       " 'jmespath==0.9.3',\n",
-       " 'jsl==0.2.4',\n",
-       " 'json5==0.6.0',\n",
-       " 'jsonschema==2.6.0',\n",
-       " 'kombu==4.1.0',\n",
-       " 'logutils==0.3.5',\n",
-       " 'lxml==4.1.1',\n",
-       " 'numpy==1.14.0',\n",
-       " 'oauth2client==4.1.2',\n",
-       " 'psycopg2==2.7.4',\n",
-       " 'pyasn1-modules==0.2.1',\n",
-       " 'pyasn1==0.4.2',\n",
-       " 'python-dateutil==2.6.1',\n",
-       " 'pytz==2018.3',\n",
-       " 'rainbow-logging-handler==2.2.2',\n",
-       " 'raven==6.5.0',\n",
-       " 'requests==2.18.4',\n",
-       " 'rsa==3.4.2',\n",
-       " 's3transfer==0.1.12',\n",
-       " 'scikit-learn==0.19.1',\n",
-       " 'scipy==1.0.0',\n",
-       " 'selinon==1.0.0rc3',\n",
-       " 'semantic-version==2.6.0',\n",
-       " 'six==1.11.0',\n",
-       " 'toml==0.9.4',\n",
-       " 'unidiff==0.5.5',\n",
-       " 'uritemplate==3.0.0',\n",
-       " 'urllib3==1.22',\n",
-       " 'vine==1.1.4',\n",
-       " 'xmltodict==0.11.0'}"
+       "84"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pipdata-gistdata\n"
+    "len(gistdata-pipdata)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pip._vendor import pkg_resources\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{rainbow-logging-handler 2.2.2 (/usr/local/lib/python3.6/site-packages): ['colorama', 'logutils']}\n",
+      "{rainbow-logging-handler 2.2.2 (/usr/local/lib/python3.6/site-packages): ['colorama', 'logutils'], xmltodict 0.11.0 (/usr/local/lib/python3.6/site-packages): []}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'boto'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-e2f126301586>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0meach\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpipdata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0m_package_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meach\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"==\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0m_package\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpkg_resources\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworking_set\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mby_key\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0m_package_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mpackage_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0m_package\u001b[0m\u001b[0;34m]\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0m_package\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrequires\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpackage_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'boto'"
+     ]
+    }
+   ],
+   "source": [
+    "package_dict = {}\n",
+    "for each in pipdata:\n",
+    "    _package_name = each.split(\"==\")[0]\n",
+    "    _package = pkg_resources.working_set.by_key[_package_name]\n",
+    "    package_dict[_package]  = [str(r) for r in _package.requires()]\n",
+    "    print(package_dict)\n",
+    "package_dict\n"
    ]
   },
   {
